# nemesis_final

./: .gitignore  auto_cloudflare.py  build_frontend.py  deploy_now.bat  fixer.py  intelligence_pipeline.py  nemesis_core.py  pyproject.toml  requirements.txt  tracer.html
backend/: pyproject.toml
services/blockchain/: collectors.py
services/monitoring/: startup.py
