[project]
name = "nemesis-core"
version = "1.0.0"
description = "NEMESIS Backend"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "pydantic",
    "python-dotenv",
    "requests",
    "aiohttp",
    "websockets",
    "colorama",
    "beautifulsoup4",
    "mcp",
    "pymongo",
    "cryptography",
    "asyncpg",
    "google-generativeai"
]
[tool.vercel]
entrypoint = "nemesis_core:app"
