[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemesis-backend"
version = "0.1.0"
description = "Nemesis Intelligence Network - Cloudflare Workers Python Backend"
requires-python = ">=3.11"
authors = [
    {name = "Lionsgate Intelligence", email = "admin@nemesis-platform.local"}
]
dependencies = [
    "wrangler",
    "python-dotenv",
    "requests",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["nemesis_backend"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
